--- a/index.html
+++ b/index.html
@@ -1,65 +1,144 @@
-<!-- 声明文档类型 -->
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
-
-    <!--更多资源：https://gitee.com/iGaoWei/big-data-view -->
-    <!-- 指定网页字符编码 -->
     <meta charset="UTF-8">
-    <!-- 适配移动端 -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>全国疫情实时监控</title>
-    <link rel="stylesheet" href="./static/css/China.css">
+    <title>首页</title>
+    <!-- <link rel="stylesheet" type="text/css" href="css/style.css" /> -->
+    <style>
+        * {
+            padding: 0;
+            margin: 0;
+            font-family: "楷体";
+        }
+
+        header {
+            background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(https://images.pexels.com/photos/1083822/pexels-photo-1083822.jpeg?cs=srgb&dl=pexels-lisa-1083822.jpg&fm=jpg);
+            height: 100vh;
+            background-size: cover;
+            background-position: center;
+        }
+
+        ul {
+            float: right;
+            list-style-type: none;
+            margin: 25px;
+        }
+
+        ul li {
+            display: inline-block;
+        }
+
+        ul li a {
+            text-decoration: none;
+            color: #fff;
+            padding: 5px 20px;
+            border: 1px solid transparent;
+            transition: .6s ease;
+            border-radius: 20px;
+        }
+        #sub{
+            text-decoration: none;
+            color: #fff;
+            padding: 5px 20px;
+            border: 1px solid transparent;
+            transition: .6s ease;
+            border-radius: 20px;
+        }
+
+        ul li form a:hover{
+            background-color: #fff;
+            color: #000;
+        }
+        ul li a:hover {
+            background-color: #fff;
+            color: #000;
+        }
+
+            ul li.active a {
+                background-color: #fff;
+                color: #000;
+            }
+
+        .title {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+
+        .title h1 {
+            color: #fff;
+            font-size: 70px;
+            font-family: Century Gothic;
+        }
+    </style>
 </head>
 
 <body>
-    <div id="title">全国疫情实时监控
-    <a href="http://127.0.0.1:5000/#" style="color:lightseagreen; font-size: 0.7em">---回到首页</a></div>
-    <div id="left1">
-    </div>
-    <div id="left2">
-    </div>
-    <div id="center1">
-        <div class="item">
-            <div class="number" id="confirm"></div>
-            <div class="text">累计确诊</div>
+    <header>
+        <div class="main">
+            <ul>
+                <li class="active"><a href="#">首页</a></li>
+                <li><a href="/world" target="_parent">世界疫情状况</a></li>
+                <!-- <li><a href="#">ddddd</a></li> -->
+                <li><a href="http://127.0.0.1:5000/china" target="_parent">全国疫情状况</a></li>
+                <li>
+                <form action="/province" method="get">
+                    <select style="height: 30px; width: 200px; "  name="data" >
+                            <option  value="volovo">选择您要查看的省份：</option>
+                            <option  value="安徽">安徽</option>
+                            <option  value="澳门">澳门</option>
+                            <option  value="北京">北京</option>
+                            <option  value="重庆">重庆</option>
+                            <option  value="福建">福建</option>
+                            <option  value="甘肃">甘肃</option>
+                            <option  value="广东">广东</option>
+                            <option  value="广西">广西</option>
+                            <option  value="贵州">贵州</option>
+                            <option  value="海南">海南</option>
+                            <option  value="河北">河北</option>
+                            <option  value="河南">河南</option>
+                            <option  value="黑龙江">黑龙江</option>
+                            <option  value="湖北">湖北</option>
+                            <option  value="湖南">湖南</option>
+                            <option  value="吉林">吉林</option>
+                            <option  value="江苏">江苏</option>
+                            <option  value="江西">江西</option>
+                            <option  value="辽宁">辽宁</option>
+                            <option  value="内蒙古">内蒙古</option>
+                             <option  value="宁夏">宁夏</option>
+                            <option  value="青海">青海</option>
+                            <option  value="山东">山东</option>
+                            <option  value="山西">山西</option>
+                            <option  value="陕西">陕西</option>
+                            <option  value="上海">上海</option>
+                            <option  value="四川">四川</option>
+                            <option  value="台湾">台湾</option>
+                            <option  value="天津">天津</option>
+                            <option  value="西藏">西藏</option>
+                            <option  value="香港">香港</option>
+                            <option  value="新疆">新疆</option>
+                            <option  value="云南">云南</option>
+                            <option  value="浙江">浙江</option>
+                    </select>
+                    <a>
+                        <input style="color: black" id="sub" type="submit" value="提交" placeholder="">
+                    </a>
+                </form>
+
+<!--                    <a href="http://127.0.0.1:5000/province" target="_blank">查询</a>-->
+                </li>
+<!--                <li><a href="https://blog.csdn.net" target="_blank"><span style="color: crimson;">C</span>SDN官网</a></li>-->
+
+            </ul>
         </div>
-        <div class="item">
-            <div class="number" id="heal"></div>
-            <div class="text">累计治愈</div>
+        <div class="title">
+            <h1><span style="color: crimson;"></span> 疫情之下，数据至上</h1>
         </div>
-        <div class="item">
-            <div class="number" id="dead"></div>
-            <div class="text">累计死亡</div>
-        </div>
-        <div class="item">
-            <div class="number" id="nowConfirm"></div>
-            <div class="text">现有确诊</div>
-        </div>
-        <div class="item">
-            <div class="number" id="noInfect"></div>
-            <div class="text">无症状感染者</div>
-        </div>
-        <div class="item">
-            <div class="number" id="importedCase"></div>
-            <div class="text">境外输入</div>
-        </div>
-    </div>
-    <div id="center2">
-    </div>
-    <div id="right1"></div>
-    <div id="right2"></div>
-    <!--更多资源：https://gitee.com/iGaoWei/big-data-view -->
-    <script src="./static/js/data.js"></script>
-    <script src="./static/js/center1.js"></script>
-    <script src="./static/js/echarts.min.js"></script>
-    <script src="./static/js/china.js"></script>
-    <script src="./static/js/center2.js" charset="utf-8"></script>
-    <script src="./static/js/left1.js"></script>
-    <script src="./static/js/left2.js"></script>
-    <script src="./static/js/right1.js" charset="utf-8"></script>
-    <script src="./static/js/right2.js" charset="utf-8"></script>
+    </header>
 </body>
 
 </html>
