--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
                 <li class="active"><a href="#">首页</a></li>
                 <li><a href="/world" target="_parent">世界疫情状况</a></li>
                 <!-- <li><a href="#">ddddd</a></li> -->
-                <li><a href="http://127.0.0.1:5000/china" target="_parent">全国疫情状况</a></li>
+                <li><a href="./templates/China_Web.html" target="_parent">全国疫情状况</a></li>
+                <!-- <li><a href="http://127.0.0.1:5000/china" target="_parent">全国疫情状况</a></li> -->
                 <li>
                 <form action="/province" method="get">
                     <select style="height: 30px; width: 200px; "  name="data" >
